feat (wip): yaml configs, scripts, hide files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mono",
   "packageManager": "bun@1.2.15",
   "engines": {
-    "node": "22.16.0",
+    "node": ">=22.16.0 <23",
     "bun": ">=1.2.15 <2"
   },
   "scripts": {
@@ -11,7 +11,7 @@
     "lint": "turbo lint",
     "check": "update-ts-references --ignoreReferencePaths ./tsconfig.build.json && bun tsc",
     "tsc": "tsc -b --incremental",
-    "build:bunup": "bunup --config ./tooling/bunup/bunup.config.ts && bun check-types",
+    "build:bunup": "bunup --config ./tooling/bunup/bunup.config.ts && bun check",
     "postinstall": ""
   },
   "workspaces": {
@@ -32,8 +32,7 @@
   },
   "dependencies": {
     "@mono/tsconfig": "workspace:*",
-    "turbo": "^2.5.4",
-    "update-ts-references": "^3.6.0"
+    "turbo": "^2.5.4"
   },
   "version": "0.0.0"
 }
