--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -9,14 +9,12 @@
     "src/**/*"
   ],
   "compilerOptions": {
+    "rootDir": ".",
     "outDir": "dist"
   },
   "references": [
     {
       "path": "../../packages/a"
-    },
-    {
-      "path": "../../packages/c"
     },
     {
       "path": "../../packages/utils"
