--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -10,5 +10,13 @@
   ],
   "compilerOptions": {
     "isolatedDeclarations": false
-  }
+  },
+  "references": [
+    {
+      "path": "../a"
+    },
+    {
+      "path": "./tsconfig.build.json"
+    }
+  ]
 }
