--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dev": "bun i && turbo dev",
     "build": "bun i && turbo build",
     "lint": "turbo lint",
-    "check": "update-ts-references --ignoreReferencePaths ./tsconfig.build.json && bun tsc",
+    "check": "bun run tooling/script-bun/src/update-ts-references.ts --ignoreReferencePaths ./tsconfig.build.json && bun tsc",
     "tsc": "tsc -b --incremental",
     "build:bunup": "bunup --config ./tooling/bunup/bunup.config.ts && bun check",
-    "postinstall": ""
+    "postinstall": "bun check"
   },
   "workspaces": {
     "packages": [
