--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "valibot": "^1.1.0",
-    "@mono/tsconfig": "workspace:*"
+    "@mono/tsconfig": "workspace:*",
+    "@mono/a": "workspace:*"
   }
 }
