--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,25 +3,26 @@
   "files": [],
   "references": [
     {
-      "path": "tooling/bunup"
-    },
-    {
       "path": "tooling/script-bun"
     },
     {
-      "path": "apps/app"
+      "path": "tooling/bunup"
     },
     {
       "path": "apps/redwood-sdk"
     },
     {
-      "path": "packages/a"
+      "path": "apps/app"
     },
     {
       "path": "packages/c"
     },
     {
+      "path": "packages/a"
+    },
+    {
       "path": "packages/utils"
     }
-  ]
+  ],
+  "compilerOptions": {}
 }
