--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,23 +33,23 @@
   //   "editor.defaultFormatter": "oxc.oxc-vscode"
   // },
   "files.exclude": {
-    "**/bun.lock": false,
-    "**/dist": false,
-    "**/tests": false,
-    "**/tmp": false,
-    "**/.wrangler": false,
-    "**/.hide-paths.yaml": false,
-    "**/.update-ts-project-refs.yaml": false,
-    "**/.turbo": false,
-    "**/.gitignore": false,
-    "**/.cursorignore": false,
-    "**/.cursorindexingignore": false,
-    "**/.gitattributes": false,
-    "**/.editorconfig": false,
-    "**/.nvmrc": false,
-    "**/.npmrc": false,
-    "**/.pnpm-lock.yaml": false,
-    "**/tsconfig.tsbuildinfo": false,
-    "**/node_modules": false
+    "**/bun.lock": true,
+    "**/dist": true,
+    "**/tests": true,
+    "**/tmp": true,
+    "**/.wrangler": true,
+    "**/.hide-paths.yaml": true,
+    "**/update-ts-refs.yaml": true,
+    "**/.turbo": true,
+    "**/.gitignore": true,
+    "**/.cursorignore": true,
+    "**/.cursorindexingignore": true,
+    "**/.gitattributes": true,
+    "**/.editorconfig": true,
+    "**/.nvmrc": true,
+    "**/.npmrc": true,
+    "**/.pnpm-lock.yaml": true,
+    "**/tsconfig.tsbuildinfo": true,
+    "**/node_modules": true
   }
 }
