--- a/tools/tsconfig/package.json
+++ b/tools/tsconfig/package.json
@@ -5,7 +5,8 @@
   "files": [
     "base.json",
     "apps.json",
+    "tests.json",
     "packages.json",
-    "tests.json"
+    "packages.build.json"
   ]
 }
