--- a/tools/templates/packages/shared/package.json
+++ b/tools/templates/packages/shared/package.json
@@ -1,6 +1,7 @@
 {
   "version": "0.0.0",
-  "name": "@mono/utils",
+  "name": "@mono/<name>",
+  "main": "./src/index.ts",
   "type": "module",
   "exports": {
     "./package.json": "./package.json",
