--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -4,10 +4,11 @@
     "**/*.test.ts",
     "**/*.test.tsx",
     ".turbo",
+    "dist",
     "node_modules"
   ],
   "include": [
-    "./index.ts"
+    "**/*.ts"
   ],
   "compilerOptions": {
     "isolatedDeclarations": false
