--- a/tools/bunup/package.json
+++ b/tools/bunup/package.json
@@ -2,16 +2,17 @@
   "version": "0.0.0",
   "name": "@mono/bunup",
   "type": "module",
-  "main": "./src/bunup.config.ts",
-  "scripts": {
-    "dev": "tsc -p ./tsconfig.json --watch",
-    "build": "tsc -p ./tsconfig.json"
-  },
   "dependencies": {
     "bunup": "catalog:"
   },
   "exports": {
-    ".": "./src/bunup.config.ts",
-    "./utils": "./src/bunup.config.utils.ts"
+    ".": {
+      "types": "./src/bunup.config.ts",
+      "default": "./src/bunup.config.ts"
+    },
+    "./utils": {
+      "types": "./src/bunup.config.utils.ts",
+      "default": "./src/bunup.config.utils.ts"
+    }
   }
 }
