--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
       ]
     },
     "dev": {
+      "dependsOn": [
+        "^build"
+      ],
       "cache": false,
       "persistent": true
     },
