--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "catalog": {
       "@types/bun": "^1.2.15",
       "@types/node": "^22.15.29",
+      "@types/react-dom": "^19.1.6",
+      "@types/react": "^19.1.6",
       "bunup": "^0.8.25",
+      "rwsdk": "^0.1.0-alpha.4",
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0",
       "typescript": "^5.8.3",
       "vite": "^6.3.5",
-      "wrangler": "^4.19.1",
-      "rwsdk": "^0.1.0-alpha.4"
+      "wrangler": "^4.19.1"
     }
   },
   "dependencies": {
