--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
       ],
       "outputs": [
         "dist/**"
-      ]
+      ],
+      "cache": false
     },
     "dev": {
       "dependsOn": [
