--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,12 +4,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "types": "wrangler types ./types/worker.d.ts"
   },
   "dependencies": {
     "@mono/utils": "workspace:*",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "rwsdk": "catalog:",
     "vite": "catalog:",
-    "wrangler": "catalog:"
+    "wrangler": "catalog:",
+    "typescript": "catalog:"
   }
 }
