--- a/apps/app/wrangler.jsonc
+++ b/apps/app/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/wrangler/config-schema.json",
+  "$schema": "../../node_modules/wrangler/config-schema.json",
   "name": "timing",
   "main": "src/worker.tsx",
   "compatibility_date": "2024-09-23",
