fix: emit packages js and declarations on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,24 +33,24 @@
   //   "editor.defaultFormatter": "oxc.oxc-vscode"
   // },
   "files.exclude": {
-    "**/bun.lock": true,
-    "**/dist": true,
-    "**/tests": true,
-    "**/tmp": true,
-    "**/.wrangler": true,
-    "**/.hide-paths.yaml": true,
-    "**/update-ts-refs.yaml": true,
-    "**/.turbo": true,
-    "**/.gitignore": true,
-    "**/.cursorignore": true,
-    "**/.cursorindexingignore": true,
-    "**/.gitattributes": true,
-    "**/.editorconfig": true,
-    "**/.nvmrc": true,
-    "**/.npmrc": true,
-    "**/.pnpm-lock.yaml": true,
-    "**/tsconfig.tsbuildinfo": true,
-    "**/node_modules": true
+    "**/bun.lock": false,
+    "**/dist": false,
+    "**/tests": false,
+    "**/tmp": false,
+    "**/.wrangler": false,
+    "**/.hide-paths.yaml": false,
+    "**/update-ts-refs.yaml": false,
+    "**/.turbo": false,
+    "**/.gitignore": false,
+    "**/.cursorignore": false,
+    "**/.cursorindexingignore": false,
+    "**/.gitattributes": false,
+    "**/.editorconfig": false,
+    "**/.nvmrc": false,
+    "**/.npmrc": false,
+    "**/.pnpm-lock.yaml": false,
+    "**/tsconfig.tsbuildinfo": false,
+    "**/node_modules": false
   },
   "exportall.config.folderListener": [
     "/packages/utils/src/browser",
