--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "gen": "bun run tools/script-bun/src/gen.ts",
     "build": "bun i && turbo build",
     "lint": "turbo lint",
-    "check": "bun run tools/script-bun/src/update-ts-references.ts --ignoreReferencePaths ./tsconfig.build.json && bun tsc -b",
-    "tsc": "tsc -b --incremental --extendedDiagnostics",
-    "tsc:dry": "tsc -b --incremental --extendedDiagnostics --dry",
+    "check": "bun tsrefs && bun tsc",
+    "tsrefs": "bun run tools/script-bun/src/update-ts-references.ts --ignoreReferencePaths ./tsconfig.build.json",
+    "tsc": "tsc -b --incremental",
+    "tsc:dry": "tsc -b --incremental --dry",
     "build:bunup": "bunup --config ./tools/bunup/bunup.config.ts && bun check",
     "reinstall": "bun run tools/script-bun/src/delete-tmp-files-dirs.ts . && bun pm cache rm && bun i",
     "test:dev": "bun i && turbo dev --filter=!@mono/redwood-sdk",
