--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -8,7 +8,7 @@
     "node_modules"
   ],
   "include": [
-    "**/*.ts"
+    "src/index.ts"
   ],
   "compilerOptions": {
     "isolatedDeclarations": false
